working BandP (MAST not done)