@@ -19,7 +19,6 @@ public class LeafSet {
     public boolean valid = false;
     public boolean checked_valid = false;
     public String name;
-    public int ILPval;
 
     public LeafSet(Graph<Node, DefaultEdge> tree1, Graph<Node, DefaultEdge> tree2, Set<Node> newLeaves) {
         this.full_tree1 = tree1;
@@ -27,29 +26,20 @@ public class LeafSet {
         this.leaves = newLeaves;
     }
 
-    public Set<Node> get_internal(int tree){
-        if(tree==1) {
+    public boolean has_internal(int internal, int tree){
+        if(tree==1){
             if (subgraphNodes1 == null) {
                 subgraphNodes1 = get_internal_nodes(full_tree1, leaves);
             }
-            return subgraphNodes1;
-        }else if(tree==2) {
-            if (subgraphNodes2 == null) {
-                subgraphNodes2 = get_internal_nodes(full_tree2, leaves);
-            }
-            return subgraphNodes2;
-        }
-        return null;
-    }
-
-    public boolean has_internal(int internal, int tree){
-        if(tree==1){
             for(Node possibleNode: subgraphNodes1){
                 if(possibleNode.id == internal){
                     return true;
                 }
             }
         }else{
+            if (subgraphNodes2 == null) {
+                subgraphNodes2 = get_internal_nodes(full_tree2, leaves);
+            }
             for(Node possibleNode: subgraphNodes2){
                 if(possibleNode.id == internal){
                     return true;
@@ -62,15 +52,15 @@ public class LeafSet {
     public Graph<Node, DefaultEdge> get_subgraph(int tree){
         if(tree==1) {
             if (subgraph1 == null) {
-                get_internal(1);
-                subgraph1 = new AsSubgraph(full_tree1, subgraphNodes1);
+                subgraphNodes1 = get_internal_nodes(full_tree1, leaves);
+                subgraph1 = new AsSubgraph<>(full_tree1, subgraphNodes1);
                 subgraph1 = GraphMethods.remove_root(subgraph1);
             }
             return subgraph1;
         } else if(tree==2) {
             if (subgraph2 == null) {
-                get_internal(2);
-                subgraph2 = new AsSubgraph(full_tree2, subgraphNodes2);
+                subgraphNodes2 = get_internal_nodes(full_tree2, leaves);
+                subgraph2 = new AsSubgraph<>(full_tree2, subgraphNodes2);
                 subgraph2 = GraphMethods.remove_root(subgraph2);
             }
             return subgraph2;
@@ -81,9 +71,12 @@ public class LeafSet {
     public Set<Node> get_internal_nodes(Graph<Node, DefaultEdge> tree, Set<Node> leafNodes) {
         Set<Node> internalNodes = new HashSet<>();
         List<Node> leafNodesList = new ArrayList<>(leafNodes);
-        Node node1 = leafNodesList.get(0);
+        Node node1 = leafNodesList.getFirst();
 
         for (Node node : leafNodes) {
+            if(node.equals(node1)){
+                break;
+            }
             BFSShortestPath<Node, DefaultEdge> BFSShortestPath = new BFSShortestPath<Node, DefaultEdge>(tree);
             GraphPath<Node, DefaultEdge> shortestPath = BFSShortestPath.getPath(node, node1);
             List<Node> pathNodes = shortestPath.getVertexList();
@@ -105,9 +98,9 @@ public class LeafSet {
         return valid;
     }
 
-    public boolean contains(String leaf){
+    public boolean contains(Node leaf){
         for(Node node: leaves){
-            if(node.name==leaf){
+            if(node.name.equals(leaf.name)){
                 return true;
             }
         }
